<resources>
    <string name="app_name">Food Runner</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_accout_sign_up_now">Don\'t have account sign up now</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email_address">Enter Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Deliver Address</string>
    <string name="password_min_4_character">Password(min 4 char)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="emai_addres">Enter Email</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp">Enter OTP</string>
    <string name="new_password">Enter New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="myprofile">My Profile</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="food_runner">Food Runner</string>
    <string name="open_home">Open Tab</string>
    <string name="close_home">Close Tab</string>
    <string name="hello_blank_home">Home</string>
    <string name="hello_blank_profile">My Profilr</string>
    <string name="hello_blank_avorties">Favorites</string>
    <string name="order_history">Order History</string>
    <string name="foodrunner_app">Food Runner App</string>
    <string name="favourites">Choose from the menu item below</string>
    <string name="rs">Rs.</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been successfully placed</string>
    <string name="ok">OK</string>
    <string name="bacco_tell">Bacco Tell</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="hint_previousorder">Your previous order are listed below:</string>
    <string name="add">ADD</string>
    <string name="enter_your_registered_mobile_number_and_email_address">Enter your registered mobile number and email address:</string>
    <string name="an_otp_will_be_sent_to_your_email_address">An OTP will be sent to your Email address</string>
    <string name="no_favourite_restaurent_added">No Favourite Restaurent Added</string>
    <string name="no_order">No Order Placed Yet</string>
    <string name="sort">sort</string>
    <string name="sort_by_price_high_to_low">Sort by price high to low</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_price_low_to_high">Sort by price low to high</string>

</resources>
