<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtEnterOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:textColor="#fff"
        android:text="@string/enter_the_received_otp_below"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/otp"
        android:drawableStart="@drawable/ic_phone"
        android:maxLines="1"
        android:inputType="number"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/new_password"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/enter_your_number"
        android:drawableStart="@drawable/ic_phone"
        android:inputType="number"
        android:maxLength="10"
        />
    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="18dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textStyle="bold"
        />

</LinearLayout>