<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/foodrunner"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/enter_your_registered_mobile_number_and_email_address"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/etUNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/mobile_number"
        android:drawableStart="@drawable/ic_phone"
        android:maxLines="1"
        android:inputType="number"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/etUEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:hint="@string/emai_addres"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="18dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textStyle="bold"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/an_otp_will_be_sent_to_your_email_address"
    android:textColor="#fff"
    android:layout_gravity="center"
    android:textStyle="normal"
    android:textSize="10sp"/>
</LinearLayout>