<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/foodrunner"
        />
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:hint="@string/enter_your_number"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_phone"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNumber"
        android:hint="@string/enter_password"
        android:background="#ffffff"
        android:layout_margin="18dp"
        android:padding="8dp"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btLogin"
        android:textColor="#64b5f6"
        android:text="@string/forget_password"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#64b5f6"
        android:text="@string/don_t_have_an_accout_sign_up_now"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"/>


</RelativeLayout>
