<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="36dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="0dp"
        android:drawableStart="@drawable/ic_person"
        android:padding="8dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_email"
        android:padding="8dp"
        android:background="#ffffff"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/etNumber"
        android:drawableStart="@drawable/ic_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_address"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="8dp"
        android:hint="@string/delivery_address"
        android:inputType="textMultiLine"/>
    <EditText
        android:id="@+id/etPassword"
        android:drawableStart="@drawable/ic_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        android:hint="@string/password_min_4_character"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="#ffffff" />
</LinearLayout>
